--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -16,7 +16,8 @@
       
       
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Link</a></li>
+      <li><%= link_to "About", about_path %></li>
+        <li><%= link_to "Login Here", new_user_session_path %></li>
         
       </ul>
     </div><!-- /.navbar-collapse -->
