--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,7 +8,8 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#"><i class="fa fa-gitlab"></i> ProjectX</a>
+      <%= link_to "<i class='fa fa-gitlab'></i> ProjecX".html_safe, root_path, class: "navbar-brand" %>
+      
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -16,9 +17,14 @@
       
       
       <ul class="nav navbar-nav navbar-right">
+      <% if current_user %>
+        <li><%= link_to "Setting", edit_user_registration_path %></li>
+         <li><%= link_to 'Sign out', destroy_user_session_path, method: :delete %></li>
+    <% else %> 
+      <li><%= link_to "Test", test_path %></li>
       <li><%= link_to "About", about_path %></li>
         <li><%= link_to "Login Here", new_user_session_path %></li>
-        
+       <% end %> 
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
