--- a/app/views/pages/test.html.erb
+++ b/app/views/pages/test.html.erb
@@ -1,2 +1,2 @@
-<h1>Test Page</h1>
+<h1><i class="fa fa-instagram"></i>Test Page<i class="fa fa-instagram"></i></h1>
 <p1>This is a test page fuckers</p1>
