--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -18,11 +18,13 @@
       
       <ul class="nav navbar-nav navbar-right">
       <% if current_user %>
+        <li><%= link_to "Help", help_path %></li>
         <li><%= link_to "Setting", edit_user_registration_path %></li>
          <li><%= link_to 'Sign out', destroy_user_session_path, method: :delete %></li>
     <% else %> 
       <li><%= link_to "Test", test_path %></li>
       <li><%= link_to "About", about_path %></li>
+      <li><%= link_to "Signin", new_user_registration_path %></li>
       <li><%= link_to "Login Here", new_user_session_path %></li>
     <% end %> 
       </ul>
